# xdisplayRuler

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  vorbere.yaml
.agents/skills/code-review-findings-first/: SKILL.md
.agents/skills/conventional-commits-authoring/: SKILL.md
.agents/skills/docs-maintenance-implementation-sync/: SKILL.md
.agents/skills/pr-description-authoring/: SKILL.md
.agents/skills/refactor-structural-readability/: SKILL.md
.agents/skills/spec-driven-doc-authoring/: SKILL.md
.agents/skills/spec-to-code-implementation/: SKILL.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  init.sh
.github/workflows/: ci.yml
docs/plans/: display-pipeline-separation.md  xdisplay-attach-handoff.md  xdisplay-ruler-handoff.md
docs/specifications/: README.md  backends-and-monitoring.md  cli.md  layout.md  output-formats.md  state-model.md
docs/user-guides/: README.md  getting-started.md  layout-enforcement.md  output-modes.md  snapshots.md  window-control.md
src/: cli.rs  enforce.rs  layout.rs  lib.rs  main.rs  monitor.rs  report.rs  state.rs
src/backend/: layout.rs  memory.rs  mod.rs  x11.rs
src/backend/x11/: control.rs  event.rs  mod.rs  mode.rs  output_control.rs  (+5 more)
src/cli/: command.rs  help.rs  mod.rs  options.rs  report.rs  tests.rs
src/enforce/: executor.rs  planner.rs  report.rs  runner.rs  tests.rs
src/layout/: mod.rs  planner.rs  policy.rs  tests.rs
src/models/: event.rs  geometry.rs  mod.rs  output.rs  window.rs
src/state/: mod.rs  report.rs  tests.rs
tests/: smoke.rs
