[package]
name = "display-ruler"
version = "0.1.0"
edition = "2021"
description = "CLI foundation for tracking Xorg display and window state"
license = "MIT OR Apache-2.0"
repository = ""
readme = "README.md"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
x11rb = { version = "0.13.2", features = ["randr"] }
